[package]
name = "async-stm32f1xx"
version = "0.2.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2018"
description = "Abstractions for asynchronous programming on the STM32F1xx family of microcontrollers."
readme = "README.md"
repository = "https://github.com/mwkroening/async-stm32f1xx"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
keywords = ["arm", "async", "cortex-m", "stm32"]

[dependencies]
as-slice = "0.1"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
futures = { version = "0.3", default-features = false }
nb = "0.1"
stm32f1xx-hal = { version = "0.6", features = ["rt"] }
void = { version = "1.0", default-features = false }

[dev-dependencies.async-embedded]
git = "https://github.com/rust-embedded-community/async-on-embedded"
rev = "4caea4669dd34c4e0787dd75a90efe4677e49727"

[dev-dependencies]
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
stm32f1xx-hal = { version = "0.6", features = ["stm32f103", "medium"] }

[profile.release]
codegen-units = 1
lto = true
