[package]
name = "async-stm32f1xx"
version = "0.3.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2018"
description = "Abstractions for asynchronous programming on the STM32F1xx family of microcontrollers."
readme = "README.md"
repository = "https://github.com/mwkroening/async-stm32f1xx"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
keywords = ["arm", "async", "cortex-m", "stm32"]

[dependencies]
as-slice = "0.1"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
embedded-dma = "0.1"
futures = { version = "0.3", default-features = false }
nb = "1.0"
stm32f1xx-hal = { version = "0.7", features = ["rt"] }
void = { version = "1.0", default-features = false }

[dev-dependencies.async-embedded]
git = "https://github.com/rust-embedded-community/async-on-embedded"
rev = "aa43ccddffb8ba0460c49bcfe61cba24d966db6c"

[dev-dependencies]
stm32f1xx-hal = { version = "0.7", features = ["stm32f103", "medium"] }
defmt = "0.1"
defmt-rtt = "0.1"
panic-probe = { version = "0.1", features = ["print-defmt"] }

[features]
# set logging levels here
default = ["defmt-default"]
defmt-default = []

[profile.release]
codegen-units = 1
debug = 2
lto = true
